Rewrite noncharcoal data to destination file

--- a/test/_variables.scss
+++ b/test/_variables.scss
@@ -1,4 +1,7 @@
+$test: 'yo';
+
+/* charcoal variables */
 $varOne: #333;
 $var_two: blue;
 $varThree: rgb(0,255,255);
-$breakpoint: 1993;
+$breakpoint: 1996;
