--- a/_variables.scss
+++ b/_variables.scss
@@ -1,8 +1,8 @@
-$test: 'yo';
+$test: 23;
 
 /* charcoal variables */
 $varOne: #333;
 $var_two: blue;
 $varThree: rgb(0,255,255);
 $breakpoint: 1997;
-$breakBIG: 40;
+$breakBIG: 50;
